--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-    <script src="./scripts/main.js"></script>
   </head>
   <body class="page__body">
     <header class="header page__header">
@@ -204,6 +203,7 @@
             type="email"
             class="subscribe__input"
             placeholder="E-mail"
+            required
           >
           <button class="subscribe__button">
             <img src="/images/arrow-input.svg" alt=">">
@@ -322,5 +322,6 @@
         </span>
       </div>
     </footer>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
