--- a/src/index.html
+++ b/src/index.html
@@ -116,9 +116,6 @@
           </h1>
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Домашня сторінка</a>
-            </li>
-            <li class="menu__item">
               <a href="#events" class="menu__link">Виставки та події</a>
             </li>
             <li class="menu__item">
@@ -200,23 +197,21 @@
       </section>
 
       <section class="page__section lecture">
-        <div class="container container--without-padding">
-          <img
-            src="./images/Rectangle20.png"
-            alt="Картина заходу сонця"
-            class="lecture__photo"
-          >
+        <img
+          src="./images/Rectangle20.png"
+          alt="Картина заходу сонця"
+          class="lecture__photo"
+        >
 
-          <div class="container lecture__container">
-            <div class="lecture__info">
-              <div class="lecture__info-top">
-                <div class="lecture__type">Лекція</div>
-                <div class="lecture__time">26/08/2019 - 11:00</div>
-              </div>
-              <h3 class="lecture__name">
-                Від класицизму до романтизму
-              </h3>
+        <div class="container lecture__container">
+          <div class="lecture__info">
+            <div class="lecture__info-top">
+              <div class="lecture__type">Лекція</div>
+              <div class="lecture__time">26/08/2019 - 11:00</div>
             </div>
+            <h3 class="lecture__name">
+              Від класицизму до романтизму
+            </h3>
           </div>
         </div>
       </section>
@@ -323,7 +318,7 @@
       </section>
 
       <section class="page__section page__submit" id="submit">
-        <div class="container container--without-padding submit">
+        <div class="submit">
           <div class="container">
             <div class="grid grid--tablet">
               <div class="grid__item grid__item--tablet-2-5 grid__item--desktop-4-9">
