--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Художній музей</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +17,7 @@
       <div class="grid grid--onTablet grid--onDesktop">
         <div class="grid__item grid__item--onTablet-1-1 grid__item--onDesktop-1-1">
           <a
-            href="#"
+            href="#menu"
             class="header__menu-button"
           >
           </a>
@@ -74,6 +75,39 @@
         </div>
       </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="grid grid--onTablet grid--onDesktop">
+        <div class="menu__container">
+          <div class="grid__item grid__item--onTablet-1-1 grid__item--onDesktop-1-1">
+            <a
+              href="#"
+              class="menu__button-cross"
+            >
+            </a>
+          </div>
+
+          <div class="grid__item grid__item--onTablet-1-3 grid__item--onDesktop-1-3">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#current-events" class="menu__link">Актуальні події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#subscription" class="menu__link">Підписка</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+    </nav>
 
     <section class="current-events" id="current-events">
       <div class="container">
@@ -235,7 +269,7 @@
       </div>
     </section>
 
-    <section class="subscription">
+    <section class="subscription" id="subscription">
       <h2 class="subscription__title">
         Підписка
       </h2>
@@ -249,6 +283,7 @@
           type="email"
           class="subscription__input"
           placeholder="E-mail"
+          required
         >
 
         <button class="subscription__button"></button>
@@ -288,7 +323,7 @@
 
 
           <div class="grid__item grid__item--onTablet-2-5 grid__item--onDesktop-3-7">
-            <div class="footer__schedule-n-contacts">
+            <div class="footer__schedule-n-contacts" id="contacts">
               <div class="footer__schedule-info">
                 Графік роботи
                 <br>
