fixes with header ,form and links

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             </a>
           </div>
 
-          <h1 class="header__title grid__item--tablet-1-4 grid__item--desktop-3-8">
+          <h1 class="header__title grid__item--tablet-1-4 grid__item--desktop-1-6">
             Худож<span class="header__title-text-part">ній</span>
             <br>
             музей
@@ -332,6 +332,7 @@
                   id="e-mail"
                   class="subscribtion__input"
                   placeholder="E-mail"
+                  required
                 >
                 <button class="subscribtion__submit" type="submit">
                   <svg
@@ -410,13 +411,15 @@
               Контакти:
             </h4>
 
-            <p class="footer__text">
+            <a href="https://goo.gl/maps/ctcEHhthGpTCP3W3A" class="footer__adress">
               вул. М. Грушевського, 6; Київ, 01001
               тел. +38 (044) 278-13-57
               факс +38 (044) 278-74-54
-              <br>
+            </a>
+            <br>
+            <a href="mailto:info@namu.kiev.ua" class="footer__mail">
               e-mail: info@namu.kiev.ua
-            </p>
+            </a>
           </section>
           <ul class="footer__nav grid__item--tablet-2-3 grid__item--desktop-8-9">
             <li><a href="#gallery" class="footer__nav-link">Галерея</a></li>
