--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             </div>
           </div>
           <div class="grid grid--desktop header__text">
-            <div class="grid__item grid--tablet grid__item--desktop-1-4 grid__item--tablet-1-3">
+            <div class="grid__item grid--tablet grid__item--desktop-1-4 grid__item--tablet-1-3 header__title-block">
               <h1 class="title header__title">
                 ХУДОЖНІЙ МУЗЕЙ
               </h1>
@@ -44,7 +44,7 @@
               </div>
             </div>
           </div>
-          <div class="header__events">
+          <div class="textBold header__events">
             ПОДІЇ
           </div>
           <div class="header__line"></div>
@@ -171,13 +171,11 @@
           </h2>
           <div class="grid grid--desktop gallery__gap">
             <div class="grid__item grid__item--desktop-1-4">
-              <img src="./images/gallery/1.svg" alt="photo-1" class="gallery__image">
+              <img src="./images/gallery/1.svg" alt="photo-1" class="gallery__image gallery__image--top">
             </div>
             <div class="grid__item grid__item--desktop-5-12">
-              <img src="./images/gallery/2.svg" alt="photo-2" class="gallery__image">
+              <img src="./images/gallery/2.svg" alt="photo-2" class="gallery__image gallery__image--top">
             </div>
-          </div>
-          <div class="grid grid--desktop">
             <div class="grid__item grid__item--desktop-1-8">
               <img src="./images/gallery/3.svg" alt="photo-3" class="gallery__image">
             </div>
@@ -191,7 +189,7 @@
     <section class="page__section subscription" id="subscription">
       <div class="container">
         <div class="subscription__content">
-          <form action="post" method="post">
+          <form action="">
             <div class="subscription__wrapper">
               <h2 class="subscription__title page__title">
                 Підписка
