--- a/src/index.html
+++ b/src/index.html
@@ -215,8 +215,8 @@
     </section>
     <footer class="footer" id="footer">
       <div class="container">
-        <div class="grid--tablet footer__content">
-          <div class="grid__item grid__item--desktop-1-1 footer__logo-block">
+        <div class="grid footer__content">
+          <div class="grid__item grid__item-1-2 grid__item--desktop-1-1 footer__logo-block">
             <a href="#" class="logo footer__logo">
               <img
                 src="./images/logo.svg"
@@ -241,13 +241,13 @@
               </a>
             </div>
           </div>
-          <div class="grid__item grid__item--desktop-3-4 grid__item--tablet-2-3">
+          <div class="grid__item grid__item-1-1 grid__item--desktop-3-4 grid__item--tablet-2-3">
             <div class="footer__graphic">
               <div class="text footer__subtitle">
                 Графік роботи
               </div>
               <div class="text footer__text">
-                <b>12:00 - 20:00</b> середа <b>12:00 - 20:00</b> четвер <b>12:00 - 20:00</b> п’ятниця <b>11:00 - 19:00</b> субота <b>11:00 - 19:00</b> неділя
+                <b>12:00 - 20:00</b> середа <br> <b>12:00 - 20:00</b> четвер <br> <b>12:00 - 20:00</b> п’ятниця <br> <b>11:00 - 19:00</b> субота <br> <b>11:00 - 19:00</b> неділя
                 <br>
                 <br>
                 <b>Вихідні:</b> понеділок, вівторок
@@ -256,7 +256,7 @@
               </div>
             </div>
           </div>
-          <div class="grid__item grid__item--desktop-5-6 grid__item--tablet-4-5">
+          <div class="grid__item grid__item-2-2 grid__item--desktop-5-6 grid__item--tablet-4-5">
             <div class="footer__contacts">
               <div class="text footer__subtitle">
                 Контакти:
@@ -272,7 +272,7 @@
               </div>
             </div>
           </div>
-          <div class="grid__item grid__item--tablet-2-5">
+          <div class="grid__item grid__item-1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
             <div class="footer__line"></div>
           </div>
           <div class="grid__item grid__item--desktop-8-9 grid__item--tablet-2-3">
@@ -295,17 +295,19 @@
               </a>
             </div>
           </div>
-          <div class="footer__wrapper grid__item grid__item--desktop-1-3 grid__item--tablet-1-2">
-            <div class="text footer__lowText">
-              Copyright © 2019. All Rights Reserved.
-            </div>
-          </div>
-          <div class="footer__wrapper grid__item grid__item--desktop-11-12 grid__item--tablet-5-6">
-            <div class="text footer__lowText">
-              Designed by Zhyriada Marina
-            </div>
-          </div>
         </div>
+          <div class="grid footer__wrapper">
+            <div class="grid__item grid__item--desktop-1-3 grid__item--tablet-1-2">
+              <div class="text footer__lowText">
+                Copyright © 2019. All Rights Reserved.
+              </div>
+            </div>
+            <div class="grid__item grid__item--desktop-11-12 grid__item--tablet-5-6">
+              <div class="text footer__lowText">
+                Designed by Zhyriada Marina
+              </div>
+          </div>
+          </div>
       </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
