target attr addedto links

--- a/src/index.html
+++ b/src/index.html
@@ -362,22 +362,42 @@
               MU
             </a>
             <div class="footer__soc-links2 grid__item--tablet-1-1">
-              <a href="https://www.facebook.com/namu.museum/" class="footer__link">
+              <a
+                  href="https://www.facebook.com/namu.museum/"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                 <img src="./images/icons/facebook.svg" alt="fb-link">
               </a>
 
-              <a href="https://www.instagram.com/namu.museum/?hl=ru" class="footer__link">
+              <a
+                  href="https://www.instagram.com/namu.museum/?hl=ru"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                 <img src="./images/icons/instagram.svg" alt="inst-link">
               </a>
             </div>
           </div>
           <hr class="footer__separate grid__item--desktop-7-7">
           <div class="footer__soc-links1 grid__item--tablet-1-1">
-            <a href="https://www.facebook.com/namu.museum/" class="footer__link">
+            <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
               <img src="./images/icons/facebook.svg" alt="fb-link">
             </a>
 
-            <a href="https://www.instagram.com/namu.museum/?hl=ru" class="footer__link">
+            <a
+              href="https://www.instagram.com/namu.museum/?hl=ru"
+              class="footer__link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img src="./images/icons/instagram.svg" alt="inst-link">
             </a>
           </div>
@@ -411,7 +431,12 @@
               Контакти:
             </h4>
 
-            <a href="https://goo.gl/maps/ctcEHhthGpTCP3W3A" class="footer__adress">
+            <a
+                href="https://goo.gl/maps/ctcEHhthGpTCP3W3A"
+                class="footer__adress"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
               вул. М. Грушевського, 6; Київ, 01001
               тел. +38 (044) 278-13-57
               факс +38 (044) 278-74-54
