--- a/src/index.html
+++ b/src/index.html
@@ -225,14 +225,24 @@
               >
             </a>
             <div class="footer__networks">
-              <a href="https://www.facebook.com/" class="footer__icon">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__icon"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   src="./images/facebook.svg"
                   alt="facebook"
                   class="footer__image"
                 >
               </a>
-              <a href="https://www.instagram.com/" class="footer__icon">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="footer__icon"
+              >
                 <img
                   src="./images/insta.svg"
                   alt="instagram"
