--- a/src/index.html
+++ b/src/index.html
@@ -293,14 +293,14 @@
             </div>
             <div class="footer__networks">
               <a
-                href="#"
+                href="https://www.facebook.com/namu.museum/"
                 class="footer__link footer__link-facebook"
                 target="_blank"
                 rel="noopener"
               >
               </a>
               <a
-                href="#"
+                href="https://www.instagram.com/namu.museum/"
                 class="footer__link footer__link-instagram"
                 target="_blank"
                 rel="noopener"
