--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
 
           <div class="grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
 
-            <div class="footer__contacts">
+            <div class="footer__contacts footer__info">
               Контакти:
               <br>
               <br>
@@ -362,7 +362,9 @@
                 rel="noopener"
                 target="_blank"
               >
-                факс +38 (044) 278-74-54
+                факс +38 (044)
+                <br>
+                278-74-54
               </a>
               <br>
               <a
@@ -392,9 +394,9 @@
             <a href="#contact" class="footer__nav-link link">Контакти</a>
           </div>
 
-          <div class="footer__design grid__item--mobile-1-2 grid__item--tablet-1-6 grid__item--desktop-1-12">
-            <div class="footer__designer">Designed by Student of Mate Academy</div>
-            <div class="footer__design-details">Copyright © 2021. All Rights Reserved.</div>
+          <div class="footer__design grid__item--mobile-1-2 grid__item--tablet-1-6 grid__item--desktop-1-12" hidden>
+            <div class="footer__designer" hidden>Designed by Student of Mate Academy</div>
+            <div class="footer__design-details" hidden>Copyright © 2021. All Rights Reserved.</div>
           </div>
         </div>
       </div>
