--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="uk" class="page" id='top'>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +11,231 @@
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
-    <header class="header grid">
-      <div class="grid__item grid__item--1-5">
+    <header class="header">
+      <div class="header__container">
+        <a href="#" class="header__burger"><img src="./images/icons/burger_menu.svg" alt="burger"></a>
         <h1 class="header__title">Художній<br>музей</h1>
-      </div>
-      <div class="grid__item grid__item--6-12 header__image">
-
+        <div class="header__image">
+        </div>
+        <div class="header__logo">
+          NA<br>MU
+        </div>
+        <div class="tickets header__tickets">
+          <div class="header__tickets__title">квитки</div>
+          <div class="header__tickets__play">
+            <img
+              src="./images/icons/play.svg"
+              alt="tickets buy button"
+              class="header__buy-tickets-img"
+            >
+          </div>
+        </div>
+        <div class="header__events">
+          події
+        </div>
       </div>
     </header>
+    <main>
+      <div class="events" id="events">
+        <div class="events__title">
+          Актуальні події
+        </div>
+        <div class="events__event">
+          <div class="events__picture">
+            <img
+              src="./images/event_1.jpg"
+              alt="Event 1"
+              class="event__photo"
+            >
+          </div>
+          <div class="events__description">
+            <div>
+              <span class="events__event-type">виставка</span>
+              <span class="events__event-date">26.08-29.11.2019</span>
+            </div>
+            <div class="events__event-title">
+              Йду і повертаюсь
+            </div>
+            <div class="events__event-description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br>1980-1995 років.
+            </div>
+          </div>
+        </div>
+        <div class="events__event">
+          <div class="events__picture">
+            <img
+              src="./images/event_2.jpg"
+              alt="Event 1"
+              class="event__photo"
+            >
+          </div>
+          <div class="events__description">
+            <div>
+              <span class="events__event-type">виставка</span>
+              <span class="events__event-date">26.08-29.11.2019</span>
+            </div>
+            <div class="events__event-title">
+              І спогади і мрії
+            </div>
+            <div class="events__event-description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="lecture">
+        <div class="lecture__background">
+          <img
+            src="./images/lecture_1.jpg"
+            alt="Event 1"
+            class="event__photo"
+          >
+        </div>
+        <div class="lecture__details">
+          <div>
+            <span class="events__event-type">лекція</span>
+            <span class="events__event-date lecture__date">26/08/2019-11:00</span>
+          </div>
+          <div class="lecture__title">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery" id='gallery'>
+        <div class="gallery__title events__title">
+          Галерея
+        </div>
+        <img
+              src="./images/gallery_1.jpg"
+              alt="chick standing painting"
+              class="gallery__photo gallery__photo_1"
+        >
+        <img
+        src="./images/gallery_2.jpg"
+        alt="ancient huts painting"
+        class="gallery__photo gallery__photo_2"
+        >
+        <img
+        src="./images/gallery_3.jpg"
+        alt="ancient huts painting"
+        class="gallery__photo gallery__photo_3"
+        >
+        <img
+        src="./images/gallery_4.jpg"
+        alt="ancient huts painting"
+        class="gallery__photo gallery__photo_4"
+        >
+      </div>
+
+      <div class="slider">
+        <div class="slider__container">
+          <figure>
+            <img src="./images/gallery_1.jpg" alt="" id="img1">
+            <img src="./images/medsestra-Bojiy-Mihailo-1955.jpg" alt="" id="img2">
+            <img src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg" alt="" id="img3">
+            <img src="./images/Rectangle 24.1.jpg" alt="" id="img4">
+            <img src="./images/gallery_1.jpg" alt="">
+          </figure>
+        </div>
+        <div class="slider__buttons">
+          <a href="#img1"><div class="slider__button"></div></a>
+          <a href="#img2"><div class="slider__button"></div></a>
+          <a href="#img3"><div class="slider__button"></div></a>
+          <a href="#img4"><div class="slider__button"></div></a>
+        </div>
+      </div>
+
+      <div class="subscription">
+        <div class="subscription__title events__title">
+          Підписка
+        </div>
+        <div class="subscription__legend">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <div class="subscription__input">
+          <input class="subscription__input-field" placeholder="E-mail">
+
+          </input>
+          <div class="subscription__input-button">
+            <img
+            src="./images/icons/play.svg"
+            alt="subscription confirmation button"
+            class="subscription__confirmation-button"
+            >
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <div class="footer">
+      <a href="#top">
+        <div class="footer__logo">
+        NA<br>MU
+        </div>
+      </a>
+      <div class="footer__social">
+        <img
+        src="./images/icons/facebook.svg"
+        alt="link to facebook page"
+        class="footer__facebook"
+        >
+        <img
+        src="./images/icons/instagram.svg"
+        alt="link to instagram page"
+        class="footer__insta"
+        >
+      </div>
+
+      <div class="footer__working-schedule">
+        Графік роботи<br>
+        <br>
+        <b>12:00 — 20:00</b> середа<br>
+        <b>12:00 — 20:00</b> четвер<br>
+        <b>12:00 — 20:00</b> п’ятниця<br>
+        <b>11:00 — 19:00</b> субота<br>
+        <b>11:00 — 19:00</b> неділя<br>
+        <br>
+        <b>Вихідні:</b> понеділок, вівторок
+        <br>Каса припиняє роботу за 1 годину
+        до закриття музею
+      </div>
+
+      <div class="footer__contacts">
+        Контакти:<br>
+        <br>
+        вул. М. Грушевського, 6; <br>
+        Київ, 01001<br>
+        тел. +38 (044) 278-13-57<br>
+        факс +38 (044)<br> 278-74-54<br>
+        e-mail: info@namu.kiev.ua<br>
+      </div>
+
+      <div class="footer__separator"></div>
+
+      <div class="footer__links-col-1 footer__links">
+        <a href="#gallery">Галерея</a> <br>
+        <br>
+        <a href="#events">Виставки та події</a><br>
+        <br>
+      </div>
+      <div class="footer__links-col-2 footer__links">
+        Про нас<br>
+        <br>
+        Контакти<br>
+        <br>
+      </div>
+
+      <div class="footer__copyright">
+        <div class="footer__rights">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+        <div class="footer__designer">
+          <a href="https://www.facebook.com/MarinaCurlyLilu" target="blank">Designed by Zhyriada Marina</a><br>
+          Layout by Andriy Fesych
+        </div>
+      </div>
+    </div>
   </body>
 </html>
