--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,11 @@
 
             <div class="header__tickets">
               <a
-              href="#"
+              href="#current-events"
               class="header__tickets-text">
                 Квитки
               </a>
-              <a href="#" class="header__tickets-buy"></a>
+              <a href="#current-events" class="header__tickets-buy"></a>
             </div>
           </div>
         </div>
@@ -304,18 +304,27 @@
               </a>
 
               <div class="footer__socials">
-                <a href="https://www.facebook.com/" class="footer__socials-icons">
+                <a
+                  href="https://www.facebook.com/namu.museum/"
+                  class="footer__socials-icons"
+                  target="_blank"
+                  rel="noopener"
+                >
                   <img
                   src="images/socials__fb.svg"
                   alt="facebook"
                 >
                 </a>
 
-                <a href="https://www.instagram.com/" class="footer__socials-icons">
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="footer__socials-icons"
+                  target="_blank"
+                  rel="noopener"
+                >
                   <img
                   src="images/socials__ig.svg"
-                  alt="instagram"
-                >
+                  alt="instagram">
                 </a>
               </div>
             </div>
@@ -343,13 +352,41 @@
                 Контакти:
                 <br>
                 <br>
-                вул. <a href="https://goo.gl/maps/KazKTZGoJfM7RMbm9" class="footer__link">М. Грушевського, 6; Київ, 01001</a>
+                <a
+                  href="https://goo.gl/maps/KazKTZGoJfM7RMbm9"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                    вул. М. Грушевського, 6; Київ, 01001
+                </a>
                 <br>
-                тел. <a href="tel:+380442781357" class="footer__link">+38 (044) 278-13-57</a>
+                <a
+                  href="tel:+380442781357"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                    тел. +38 (044) 278-13-57
+                </a>
                 <br>
-                факс <a href="tel:+380442787454" class="footer__link">+38 (044) 278-74-54</a>
+                <a
+                  href="tel:+380442787454"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                    факс +38 (044) 278-74-54
+                </a>
                 <br>
-                e-mail: <a href="mailto:info@namu.kiev.ua" class="footer__link">info@namu.kiev.ua</a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                    e-mail: info@namu.kiev.ua
+                </a>
               </div>
 
               <div class="grid__item grid__item--onDesktop-12-12">
