Landing was adapted for different screens

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,354 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>HАМУ</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link type="image/x-icon" href="./images/favicon.ico" rel="shortcut icon">
+    <link type="Image/x-icon" href="./images/favicon.ico" rel="icon">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <header class="header page__header">
+      <a href="#menu" class="icon icon--menu">
+      </a>
+
+      <div class="header__content">
+        <div class="header__image-container">
+          <div class="titles museum-abbr header__abbr">
+            na
+            <br>
+            mu
+          </div>
+          <img
+            src="images/museum-photo.png"
+            alt="Museum photo"
+            class="header__image"
+          >
+        </div>
+
+        <div class="header__text-content">
+          <h1 class="titles header__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <div class="buy header__buy-tickets">
+            <div class="buy__text">
+              КВИТКИ
+            </div>
+            <a href="#events" class="buy__button">
+              &gt;
+            </a>
+          </div>
+        </div>
+
+        <a
+          href="#events"
+          class="header__events header__events--desctop"
+        >
+          Події
+        </a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="titles museum-abbr menu__abbr">
+        na
+        <br>
+        mu
+      </div>
+
+      <div class="menu__content">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#events" class="menu__link">Актуальні події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#gallery" class="menu__link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#subscription" class="menu__link">Підписка</a>
+          </li>
+          <li class="menu__item">
+            <a href="#contacts" class="menu__link">Контакти</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Вийти з меню</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main class="main-block page__main-block">
+      <section class="events main-block__events" id="events">
+        <h1 class="titles events__main-title">
+          Актуальні події
+        </h1>
+
+        <img
+          src="images/picture1.png"
+          alt="picture trees on the shore"
+          class="events__image"
+        >
+
+        <div class="events__text">
+          <div class="events__information">
+            <div class="event-type">
+              Виставка
+            </div>
+            <div class="event-date">
+              26.08-29.11.2019
+            </div>
+          </div>
+
+          <div class="titles events__title">
+            Йду і повертаюсь
+          </div>
+
+          <div class="events__description">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <span class="events__years">1980&nbsp-&nbsp1995 років.</span>
+          </div>
+        </div>
+
+        <img
+          src="images/picture2.png"
+          alt="picture girl and pefowl"
+          class="events__image"
+        >
+
+        <div class="events__text">
+          <div class="events__information">
+            <div class="event-type">
+              Виставка
+            </div>
+            <div class="event-date">
+              26.08-29.11.2019
+            </div>
+          </div>
+  
+          <div class="titles events__title">
+            І спогади і мрії
+          </div>
+  
+          <div class="events__description">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
+        </div>
+      </section>
+
+      <img
+        src="images/picture3.png"
+        alt="picture the dusk"
+        class="end-of-block-image main-block__end-of-block-image"
+      >
+
+      <section class="lecture page__lecture">
+        <div class="container-lecture">
+          <div class="lecture__information">
+            <div class="event-type">
+              Лекція
+            </div>
+            <div class="event-date">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+          <div class="titles lecture__title">
+            Від класицизму до
+            <br>
+            романтизму
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery main-block__gallery" id="gallery">
+        <h1 class="titles gallery__title">
+          Галерея
+        </h1>
+
+        <div class="gallery__images">
+          <img
+            src="images/picture2_1.png"
+            alt="Woman in Ukrainian dress"
+            class="gallery__image gallery__image--high-left"
+          >
+  
+          <img
+            src="images/picture2_2.png"
+            alt="Winter landscape"
+            class="gallery__image gallery__image--high-right"
+          >
+  
+          <img
+            src="images/picture2_3.png"
+            alt="In the park"
+            class="gallery__image gallery__image--low-left"
+          >
+
+          <img
+            src="images/picture2_4.png"
+            alt="The seashore"
+            class="gallery__image gallery__image--low-right"
+          >
+        </div>
+
+        <div class="gallery__dots">
+          <div class="gallery__dot">
+          </div>
+
+          <div class="gallery__dot">
+          </div>
+
+          <div class="gallery__dot">
+          </div>
+
+          <div class="gallery__dot">
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription page__subscription" id="subscription">
+        <h1 class="titles subscription__title">
+          Підписка
+        </h1>
+
+        <div class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+
+        <form
+          action="#"
+          class="subscription__form"
+          method="get"
+        >
+
+          <input
+            type="email"
+            class="subscription__email"
+            placeholder="E-mail"
+            required
+            id="for-linter"
+          >
+
+          <label for="for-linter"></label>
+
+          <button type="reset" class="subscription__button">
+            <img
+              src="images/arrow-black.png"
+              alt="arrow"
+              class="subscription__arrow"
+            >
+          </button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer page__footer" id="about-us">
+      <div class="footer__icons">
+        <div class="titles museum-abbr footer__abbr">
+          na
+          <br>
+          mu
+        </div>
+        <div class="social-medias">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="icon icon--facebook"
+            target="_blank">
+          </a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="icon icon--instagram"
+            target="_blank"
+          >
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        
+        <div class="footer__schedule-title">
+          Графік роботи
+        </div>
+
+        <div class="footer__schedule-content">
+          <div class="schedule">
+            <span class="schedule__time">12:00 — 20:00</span> середа
+            <br>
+            <span class="schedule__time">12:00 — 20:00</span> четвер
+            <br>
+            <span class="schedule__time">12:00 — 20:00</span> п’ятниця
+            <br>
+            <span class="schedule__time">11:00 — 19:00</span> субота
+            <br>
+            <span class="schedule__time">11:00 — 19:00</span> неділя
+            <br>
+
+            <div class="schedule__holidays">
+              <strong class="schedule__holiday">Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              <br>
+              до закриття музею
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="footer__contacts" id="contacts">
+        <div class="footer__contacts-title">
+          Контакти:
+        </div>
+
+        <div class="footer__contacts-content">
+          вул. М. Грушевського, 6; Київ, 01001
+          <br>
+          тел. +38 (044) 278-13-57
+          <br>
+          факс +38 (044) 278-74-54
+          <br>
+          e-mail: info@namu.kiev.ua
+        </div>
+      </div>
+
+      <a href="#" class="footer__to-the-top">
+      </a>
+
+      <div class="footer__separator">
+      </div>
+
+      <div class="footer__links">
+        <a href="#gallery" class="footer__link">
+          Галерея
+        </a>
+
+        <a href="#events" class="footer__link">
+          Виставки та події
+        </a>
+      </div>
+
+      <div class="footer__links">
+        <a href="#subscription" class="footer__link">
+          Про нас
+        </a>
+
+        <a href="#contacts" class="footer__link">
+          Контакти
+        </a>
+      </div>
+
+      <div class="footer__copyright">
+        Copyright © 2019. All Rights Reserved.
+      </div>
+
+      <div class="footer__designed">
+        Designed by Zhyriada Marina
+      </div>
+    </footer>
   </body>
 </html>
