desktop&ipad-done

--- a/src/index.html
+++ b/src/index.html
@@ -130,19 +130,21 @@
       </div>
 
       <div class="slider">
+        <div class="slider__title events__title">
+          Галерея
+        </div>
         <div class="slider__container">
           <figure>
             <img src="./images/gallery_1.jpg" alt="" id="img1">
-            <img src="./images/medsestra-Bojiy-Mihailo-1955.jpg" alt="" id="img2">
-            <img src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg" alt="" id="img3">
-            <img src="./images/Rectangle 24.1.jpg" alt="" id="img4">
-            <img src="./images/gallery_1.jpg" alt="">
+            <img src="./images/Rectangle 24.1.jpg" alt="" id="img2">
+            <img src="./images/medsestra-Bojiy-Mihailo-1955.jpg" alt="" id="img3">
+            <img src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg" alt="" id="img4">
           </figure>
         </div>
         <div class="slider__buttons">
-          <a href="#img1"><div class="slider__button"></div></a>
-          <a href="#img2"><div class="slider__button"></div></a>
+          <a href="#img1"><div class="slider__button btn1"></div></a>
           <a href="#img3"><div class="slider__button"></div></a>
+          <a href="#img4"><div class="slider__button"></div></a>
           <a href="#img4"><div class="slider__button"></div></a>
         </div>
       </div>
@@ -208,7 +210,7 @@
         вул. М. Грушевського, 6; <br>
         Київ, 01001<br>
         тел. +38 (044) 278-13-57<br>
-        факс +38 (044)<br> 278-74-54<br>
+        факс +38 (044) 278-74-54<br>
         e-mail: info@namu.kiev.ua<br>
       </div>
 
@@ -229,7 +231,7 @@
 
       <div class="footer__copyright">
         <div class="footer__rights">
-          Copyright © 2019. All Rights Reserved.
+          Copyright © 2022. All Rights Reserved.
         </div>
         <div class="footer__designer">
           <a href="https://www.facebook.com/MarinaCurlyLilu" target="blank">Designed by Zhyriada Marina</a><br>
