Landing was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,9 @@
           </h1>
           <div class="buy header__buy-tickets">
             <div class="buy__text">
-              КВИТКИ
+              <a href="#events" class="buy__link">
+                КВИТКИ
+              </a>
             </div>
             <a href="#events" class="buy__button">
               &gt;
