--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,20 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <h1>
-      Художній
-      <br>
-      музей
-    </h1>
+    <header class="page__header header">
+      <div class="grid">
+        <div class="header__photo"></div>
+
+        <img src="./images/menu.svg" alt="menu" class="header__menu">
+
+        <img src="./images/favicon.svg" alt="Logo" class="header__logo">
+
+        <h1 class="header__title">
+          Художній
+          <br>
+          музей
+        </h1>
+      </div>
+    </header>
   </body>
 </html>
