Header somehow works on different devices

--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,19 @@
   </head>
   <body class="page__body">
     <header class="page__header header">
-      <div class="grid">
-        <div class="header__photo"></div>
+      <div class="header__photo"></div>
+      <a href="#" class="header__menu"></a>
+      <a href="#" class="header__logo"></a>
 
-        <img src="./images/menu.svg" alt="menu" class="header__menu">
+      <h1 class="header__title">
+        Художній
+        <br>
+        музей
+      </h1>
 
-        <img src="./images/favicon.svg" alt="Logo" class="header__logo">
-
-        <h1 class="header__title">
-          Художній
-          <br>
-          музей
-        </h1>
+      <div class="header__button button">
+        <a href="#" class="button__name"></a>
+        <a href="#" class="button__icon"></a>
       </div>
     </header>
   </body>
