--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,60 @@
         <a href="#" class="button__icon"></a>
       </div>
     </header>
+
+    <main class="page__main">
+      <section class="page__events events">
+        <h2 class="events__title">Актуальні події</h2>
+
+        <div class="events__exhebition exhibition">
+          <img
+            src="./images/1.png"
+            alt="Exhibition Intro"
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__description">
+            <p class="exhibition__info">
+              <span class="exhibition__type">Виставка</span>
+              <time class="exhibition__date">26.09-29.11.2019</time>
+            </p>
+            <h3 class="exhibition__name">Йду і повертаюсь</h3>
+            <p class="exhibition__details">
+              Національний Художній Музей
+              України презентує унікальну частину
+              колекції Градобанку - українське
+              мистецтво другої половини
+              1980&#8209;1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="events__exhibition exhibition">
+          <img
+            src="./images/2.png"
+            alt="Exhibition Intro"
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__description">
+            <p class="exhibition__info">
+              <span class="exhibition__type">Виставка</span>
+              <time class="exhibition__date">26.09-29.11.2019</time>
+            </p>
+            <h3 class="exhibition__name">І спогади і мрії</h3>
+            <p class="exhibition__details">
+              Національний художній музей
+              України до 100 річчя від дня
+              народження видатної української
+              художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну
+              виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__lecture lecture"></section>
+    </main>
   </body>
 </html>
