Menu not ready and wrong buttons

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <header class="page__header header">
+    <header class="page__header header" id="header">
       <div class="header__photo"></div>
       <a href="#" class="header__menu"></a>
       <a href="#" class="header__logo"></a>
@@ -24,13 +24,13 @@
       </h1>
 
       <div class="header__button button">
-        <a href="#" class="button__name"></a>
+        <a href="#events" class="button__name"></a>
         <a href="#" class="button__icon"></a>
       </div>
     </header>
 
     <main class="page__main">
-      <section class="page__events events">
+      <section class="page__events events" id="events">
         <h2 class="events__title">Актуальні події</h2>
 
         <div class="events__exhebition exhibition">
@@ -81,7 +81,158 @@
         </div>
       </section>
 
-      <section class="page__lecture lecture"></section>
+      <section class="page__lecture lecture">
+        <img src="./images/3.png" alt="Lecture Intro" class="lecture__image">
+
+        <div class="lecture__description">
+          <p class="lecture__info">
+            <span class="lecture__type">Лекція</span>
+            <time class="lecture__date">26/08/2019 - 11:00</time>
+          </p>
+
+          <h3 class="lecture__name">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section class="page__gallery gallery" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__images">
+          <img
+            src="./images/4.png"
+            alt="Picture 1"
+            class="gallery__image gallery__image--1"
+          >
+
+          <img
+            src="./images/5.png"
+            alt="Picture 2"
+            class="gallery__image gallery__image--2"
+          >
+
+          <img
+            src="./images/6.png"
+            alt="Picture 3"
+            class="gallery__image gallery__image--3"
+          >
+
+          <img
+            src="./images/7.png"
+            alt="Picture 4"
+            class="gallery__image gallery__image--4"
+          >
+        </div>
+      </section>
+
+      <section class="page__subscription subscription">
+        <h2 class="subscription__title">Підписка</h2>
+
+        <p class="subscription__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="#" class="subscription__button button">
+          <label for="email">
+            <input
+              name="email"
+              id="email"
+              type="email"
+              placeholder="E-mail"
+              class="button__name"
+              required
+            >
+          </label>
+          <button type="submit" class="button__icon"></button>
+        </form>
+      </section>
     </main>
+
+    <footer class="page__footer footer">
+      <div class="footer__logos">
+        <a href="#" class="footer__logo"></a>
+        <div class="footer__medias">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="footer__facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="footer__instagram"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+
+      <p class="footer__schedule">
+        <span class="footer__title">Графік роботи</span>
+
+        <span class="footer__info">
+          <time class="footer__important">12:00 - 20:00</time>
+          середа<br>
+
+          <time class="footer__important">12:00 - 20:00</time>
+          четвер<br>
+
+          <time class="footer__important">12:00 - 20:00</time>
+          п'ятниця<br>
+
+          <time class="footer__important">11:00 - 19:00</time>
+          субота<br>
+
+          <time class="footer__important">11:00 - 19:00</time>
+          неділя<br>
+        </span>
+
+        <span class="footer__details">
+          <span class="footer__important">Вихідні:</span> понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину до закриття музею
+        </span>
+      </p>
+
+      <p class="footer__contacts">
+        <span class="footer__title">Контакти:</span>
+
+        <span class="footer__info">
+          <a href="https://goo.gl/maps/wkwkKcTbmVy5AG989" target="_blank">вул. М. Грушевського, 6; Київ, 01001</a><br>
+
+          <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a><br>
+
+          <a href="tel:+38 (044) 278-13-57">факс +38 (044) 278-74-54</a><br>
+
+          <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a><br>
+        </span>
+      </p>
+
+      <a href="#header" class="footer__arrow"></a>
+
+      <div class="footer__line"></div>
+
+      <nav class="footer__nav">
+        <ul>
+          <li class="footer__link">
+            <a href="#gallery">Галерея</a>
+          </li>
+
+          <li>
+            <a href="#events">Виставки та події</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li class="footer__link">
+            <a href="https://www.facebook.com/namu.museum/" target="_blank">Про нас</a>
+          </li>
+
+          <li>
+            <a href="https://goo.gl/maps/1DHZ9D3PvNBVTe439" target="_blank">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+
+      <p class="footer__copyright">
+        <span class="footer__author">Designed by Zhyriada Marina</span>
+        <span class="footer__author">Copyright © 2019. All Rights Reserved.</span>
+      </p>
+    </footer>
   </body>
 </html>
