--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body class="page__body">
     <header class="page__header header" id="header">
       <div class="header__photo"></div>
-      <a href="#" class="header__menu"></a>
+      <a href="#menu" class="header__menu-icon"></a>
       <a href="#" class="header__logo"></a>
 
       <h1 class="header__title">
@@ -28,6 +28,52 @@
         <a href="#" class="button__icon"></a>
       </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-actions">
+            <a href="#" class="menu__icon"></a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Актуальні виставки</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#lecture" class="menu__link">Події</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Оформити підписку</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="menu__call menu__call--phone"
+          >
+            +38 (044) 278-13-57
+          </a>
+
+          <a
+            href="https://goo.gl/maps/iR5eMWhCfeZHAxN17"
+            class="menu__call menu__call--action"
+          >
+            Як дістатися?
+          </a>
+        </div>
+      </div>
+    </nav>
 
     <main class="page__main">
       <section class="page__events events" id="events">
@@ -81,7 +127,7 @@
         </div>
       </section>
 
-      <section class="page__lecture lecture">
+      <section class="page__lecture lecture" id="lecture">
         <img src="./images/3.png" alt="Lecture Intro" class="lecture__image">
 
         <div class="lecture__description">
@@ -123,7 +169,7 @@
         </div>
       </section>
 
-      <section class="page__subscription subscription">
+      <section class="page__subscription subscription" id="subscription">
         <h2 class="subscription__title">Підписка</h2>
 
         <p class="subscription__description">
