--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,343 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <header class="header">
+    <div class="container">
+      <div class="header__content">
+        <a href="#menu">
+          <img
+            class="header__menu"
+            src="images/menu.svg"
+            alt="menu"
+          >
+        </a>
+        <div class="header__logo-wrapper">
+          <a href="/" class="logo">
+            <img
+              class="header__logo"
+              src="images/namu.png"
+              alt="Museam Logo NAMU"
+            >
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <nav class="page__menu menu" id="menu">
+    <div class="container">
+      <div class="menu__content">
+        <div class="menu__top header__logo-wrapper">
+          <a href="/" class="logo" title="close menu">
+            <img
+              class="header__logo"
+              src="images/namu.png"
+              alt="Museam Logo NAMU"
+            >
+          </a>
+        </div>
+
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#hero" class="menu__link">Художній музей</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#events" class="menu__link">Актуальні події</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#gallery" class="menu__link">Галерея</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#subscription" class="menu__link">Підписка</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#contact-us" class="menu__link">Контакти</a>
+          </li>
+
+          <a href="tel:+38 044 278-13-57"
+            class="menu__call"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <body class="page__body">
+    <section class="page__section hero" id="hero">
+      <div class="hero__image">
+        <img src="images/museum.png" alt="Museum">
+      </div>
+      <div class="hero__content">
+        <h1 class="hero__title">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
+        <div class="hero__btn">
+          <a href="#" class="btn">
+            <div class="btn__text">
+              КВИТКИ
+            </div>
+            <div class="btn__img"></div>
+          </a>
+        </div>
+        <a href="#events" class="hero__events">
+          <div class="hero__events--line"></div>
+          <div class="hero__events--content">ПОДІЇ</div>
+        </a>
+      </div>
+    </section>
+
+    <section class="page__section events" id="events">
+      <div class="container">
+        <div class="events__content">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+          <div class="event">
+            <img
+              class="event__img"
+              src="./images/event1.png"
+              alt="picture of nature"
+            >
+            <div class="event--desktop">
+              <div class="event__typeDate">
+                <div class="event__type">
+                  ВИСТАВКА
+                </div>
+                <div class="event__date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+              <h3 class="event__title">
+                Йду і повертаюсь
+              </h3>
+              <div class="event__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <img
+              class="event__img"
+              src="./images/event2.png"
+              alt="picture girl with bird"
+            >
+            <div class="event--desktop">
+              <div class="event__typeDate">
+                <div class="event__type">
+                  ВИСТАВКА
+                </div>
+                <div class="event__date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+              <h3 class="event__title">
+                І спогади і мрії
+              </h3>
+              <div class="event__text event__text--tablet">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </div>
+
+          <div class="event--lecture">
+            <img
+              class="event__img"
+              src="./images/event3.png"
+              alt="picture of sky"
+            >
+            <div class="event__typeWrapper">
+              <div class="event__typeDate">
+                <div class="event__type">
+                  ЛЕКЦІЯ
+                </div>
+                <div class="event__date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+              <h3 class="event__title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section gallery" id="gallery">
+      <div class="container">
+        <div class="gallery__content">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="gallery__photos">
+            <img
+              class="gallery__photos--1"
+              src="./images/gallery1.png"
+              alt="picture with woman"
+            >
+            <img
+              class="gallery__photos--1a"
+              src="./images/gallery1.png"
+              alt="picture with woman"
+            >
+            <img
+              class="gallery__photos--2"
+              src="./images/gallery2.png"
+              alt="picture with woman"
+            >
+            <img
+              class="gallery__photos--2a"
+              src="./images/gallery2.png"
+              alt="picture with woman"
+            >
+            <img
+              class="gallery__photos--3"
+              src="./images/gallery3.png"
+              alt="picture with woman"
+            >
+            <img
+              class="gallery__photos--4"
+              src="./images/gallery4.png"
+              alt="picture with woman"
+            >
+            <img
+              class="gallery__photos--5"
+              src="./images/gallery5.png"
+              alt="picture with woman"
+            >
+          </div>
+          <div class="gallery__boxCircle">
+            <div class="gallery__boxCircle--1"></div>
+            <div class="gallery__boxCircle--2"></div>
+            <div class="gallery__boxCircle--3"></div>
+            <div class="gallery__boxCircle--4"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section subscription" id="subscription">
+      <h2 class="subscription__title">
+        Підписка
+      </h2>
+      <p class="subscription__text">
+        Бути в курсі всіх актуальних подій та останніх новин.
+      </p>
+      <form class="button" action="/">
+        <label for="btn-mail"></label>
+        <input
+          class="button__mail"
+          type="email"
+          name="email"
+          placeholder="E-mail"
+          id="btn-mail"
+        >
+        <button type="submit" class="button__img--red"></button>
+      </form>
+    </section>
+
+    <footer class="footer" id="contact-us">
+      <div class="container">
+        <div class="footer__content">
+          <a href="#" class="footer__logo">
+            <img
+            class="logo__image"
+            src="images/namu.png"
+            alt="Museam Logo NAMU">
+          </a>
+
+          <div class="footer__icon icon">
+            <a href="https://facebook.com" target="_blank" class="icon__item icon__item--fb">
+              <img class="icon__image" src="./images/Facebook.svg" alt="Facebook">
+            </a>
+            <a href="https://instagram.com" target="_blank" class="icon__item">
+              <img class="icon__image" src="./images/inst.svg" alt="Instagram">
+            </a>
+          </div>
+
+          <div class="footer__schedule schedule">
+            <p class="schedule__title">
+              Графік роботи
+            </p>
+            <div class="schedule__content">
+              <p class="schedule__items">
+                <span class="schedule__content--bold">12:00 — 20:00</span> середа
+              </p>
+              <p class="schedule__items">
+                <span class="schedule__content--bold">12:00 — 20:00</span> четвер
+              </p>
+              <p class="schedule__items">
+                <span class="schedule__content--bold">12:00 — 20:00</span> п’ятниця
+              </p>
+              <p class="schedule__items">
+                <span class="schedule__content--bold">11:00 — 19:00</span> субота
+              </p>
+              <p class="schedule__items">
+                <span class="schedule__content--bold">11:00 — 19:00</span> неділя
+              </p>
+              <br><br>
+              Вихідні понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+
+          <div class="footer__contact contact">
+            <p class="contact__title">
+              Контакти:
+            </p>
+            <p class="contact__content">
+              вул. М. Грушевського, 6; Київ, 01001<br>
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <div class="footer__line"></div>
+
+          <div class="footer__nav1 nav">
+            <a href="#gallery" class="nav__item nav__galery">
+              Галерея
+            </a>
+            <a href="#events" class="nav__item nav__events">
+              Виставки та події
+            </a>
+          </div>
+
+          <div class="footer__nav2 nav">
+            <a href="#" class="nav__item nav__aboutUs">
+              Про Нас
+            </a>
+            <a href="#contact-us" class="nav__item nav__contacts">
+              Контакти
+            </a>
+          </div>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+          <p class="footer__designBy">
+            Designed by Zhyriada Marina
+          </p>
+          <a href="#" class="footer__linkStart"></a>
+        </div>
+
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
